	* Updates for SusyMetValidation, for checking the 3L met bump
		* Implemented the VR selection, variable dumps, and histos
			* Using TriggerMatch package for multilepton trigger logic
		* Eventually I'd like to make the event selection more flexible, but this
		  should probably be done by adding event selection functionality in either
		  SusyD3PDAna or a new base class

2012-10-27 Steve
	* Fixed usage of GetSignalElecSF
		* rel argument no longer exists
	* Changed default lumi in d3pd code
	* Tagging SusyCommon-00-00-46

2012-10-24 Steve
	* Update to SUSYTools-00-01-10
	* Tagging SusyCommon-00-00-45

2012-10-14 Steve
	* Added MET systematics to the MET Ref terms
	* Fixed isAF2 flag usage in m_susyObj.SetElecTLV
	* Tagging SusyCommon-00-00-44

2012-10-03 Steve
	* Added passTileErr method
	* Added larError flag to ntuple
	* Added tile err cut to the cutflow in SusyNtMaker
	* Now using D3PD isEM variables for tag >= D3PD_p1181
		* Updated MultiLep for this too
	* Tagging SusyCommon-00-00-43

2012-10-02 Steve
	* Adding new event cleaning cut flags and methods, for more flexibility
	* Added cutflow histograms for generator weights and signal subprocess
	* Changed cut order slightly to be more logical. Event only cuts first.
	* Tagging SusyCommon-00-00-42

2012-09-28 Steve
	* Tagging SusyCommon-00-00-41

2012-09-28 Matt
	* Changed rel for calculating egamma SF dependent on isAF2

2012-09-26 Steve
	* Fix isAF2 calib flag for electrons
	* Update pileup file and GRL for full HCP dataset (13/fb)
	* Tagging SusyCommon-00-00-40

2012-09-25 Matt
	* Saving truth flag from LeptonTruthTools

2012-09-20 Steve
	* Configure METUtility for STVF
	* Tagging SusyCommon-00-00-39

2012-09-19 Steve
	* Added flags to SusyD3PDAna: m_d3pdTag, m_metFlavor, m_isAF2
	* Added command line options to NtMaker: --d3pd1032, --metFlav, --af2
	* Filling passMllForAlpgen flag using MultiLep/TruthTools
	* Filling ptcone30ElStyle
	* Turned on jet calibration in SUSYTools
	* Tagging SusyCommon-00-00-38
